Fixed and added dto and mapper for admin functions