@@ -9,7 +9,6 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/admin/{adminId}/employees")
@@ -24,53 +23,39 @@ public class AdminController {
     // GET /admin/{adminId}/employees
     @GetMapping
     public ResponseEntity<List<AdminResponseDTO>> getAllEmployees(@PathVariable Long adminId) {
-        List<Employee> employees = adminService.getAllEmployees(adminId);
-        List<AdminResponseDTO> dtoList = employees.stream()
+        List<AdminResponseDTO> list = adminService.getAllEmployees(adminId)
+                .stream()
                 .map(EmployeeMapper::toDTO)
-                .collect(Collectors.toList());
-        return ResponseEntity.ok(dtoList);
+                .toList();
+
+        return ResponseEntity.ok(list);
     }
 
     // GET /admin/{adminId}/employees/find/{employeeId}
     @GetMapping("/find/{employeeId}")
     public ResponseEntity<AdminResponseDTO> getEmployeeById(@PathVariable Long adminId,
                                                             @PathVariable Long employeeId) {
-        Employee employee = adminService.findEmployee(adminId, employeeId);
-        return ResponseEntity.ok(EmployeeMapper.toDTO(employee));
+        return ResponseEntity.ok(
+                EmployeeMapper.toDTO(adminService.findEmployee(adminId, employeeId))
+        );
     }
 
     // POST /admin/{adminId}/employees/create
     @PostMapping("/create")
     public ResponseEntity<AdminResponseDTO> createEmployee(@PathVariable Long adminId,
-                                                           @RequestBody AdminRequestDTO requestDTO) {
-        Employee employee = EmployeeMapper.fromDTO(requestDTO);
-        String positionTitle = requestDTO.getEmployeePosition() != null
-                ? requestDTO.getEmployeePosition().getPositionTitle()
-                : null;
+                                                           @RequestBody AdminRequestDTO request) {
 
-        Employee createdEmployee = adminService.createEmployee(adminId, employee, positionTitle);
-        return ResponseEntity.ok(EmployeeMapper.toDTO(createdEmployee));
+        Employee created = adminService.createEmployee(adminId, request);
+        return ResponseEntity.ok(EmployeeMapper.toDTO(created));
     }
 
     // PATCH /admin/{adminId}/employees/update/{employeeId}
     @PatchMapping("/update/{employeeId}")
     public ResponseEntity<AdminResponseDTO> updateEmployee(@PathVariable Long adminId,
                                                            @PathVariable Long employeeId,
-                                                           @RequestBody AdminRequestDTO requestDTO) {
-        Employee employee = adminService.findEmployee(adminId, employeeId);
-        EmployeeMapper.updateEmployeeFromDTO(employee, requestDTO);
-
-        if (requestDTO.getEmployeePosition() != null) {
-            employee = adminService.assignPositionToEmployee(
-                    adminId,
-                    employeeId,
-                    requestDTO.getEmployeePosition().getPositionTitle()
-            );
-        } else {
-            employee = adminService.updateEmployee(adminId, employeeId, employee);
-        }
-
-        return ResponseEntity.ok(EmployeeMapper.toDTO(employee));
+                                                           @RequestBody AdminRequestDTO request) {
+        Employee updated = adminService.updateEmployee(adminId, employeeId, request);
+        return ResponseEntity.ok(EmployeeMapper.toDTO(updated));
     }
 
     // DELETE /admin/{adminId}/employees/delete/{employeeId}
